Add users query

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 my-app {
   routes {
-    # If ask takes more time than this to complete the request is failed
+    # If an ask takes more time than this to complete, then fail the request
     ask-timeout = 5s
   }
 }
